objects/Contact.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Axis__c</fullName>
        <label>Axis</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>MCD</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Lips</fullName>
                </value>
                <value>
                    <fullName>Other Makeup</fullName>
                </value>
                <value>
                    <fullName>Premium Skincare</fullName>
                </value>
                <value>
                    <fullName>Skincare</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Couture accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Consumer postal address - city.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Consumer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROSPECT</fullName>
                </value>
                <value>
                    <fullName>CONSUMER</fullName>
                </value>
                <value>
                    <fullName>GUEST</fullName>
                </value>
                <value>
                    <fullName>GENERIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASM_ID__c</fullName>
        <externalId>true</externalId>
        <label>ASM_ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Id__c</fullName>
        <description>Customer unique identifier (8-digits autonumber) within Salesforce and for external systems.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>CRM Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FEMALE</fullName>
                </value>
                <value>
                    <fullName>MALE</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineId__c</fullName>
        <label>LineId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_MCD__c</fullName>
        <label>Number of Products MCD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region/State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>StateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;ACTIVE&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GDPR_DELETE</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                    <default>true</default>
                    <label>ACTIVE</label>
                </value>
                <value>
                    <fullName>MERGED</fullName>
                </value>
                <value>
                    <fullName>DELETED</fullName>
                    <label>SUSPENDED</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_Lips__c</fullName>
        <label>Number of Products Lips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channels__c</fullName>
        <label>Channels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>/ Counter</fullName>
                </value>
                <value>
                    <fullName>/ Distributeur</fullName>
                </value>
                <value>
                    <fullName>/ eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Boutique / Counter</fullName>
                </value>
                <value>
                    <fullName>Boutique / Distributeur</fullName>
                </value>
                <value>
                    <fullName>Boutique / Distributeur / eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique / Distributeur / eCommerce / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Distributeur / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique / eCommerce / Distributeur</fullName>
                </value>
                <value>
                    <fullName>Boutique / eCommerce / Distributeur / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / eCommerce / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / Distributeur</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / Distributeur / eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / Distributeur / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / eCommerce / Distributeur</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / eCommerce / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / Institut</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / Institut / Distributeur</fullName>
                </value>
                <value>
                    <fullName>Boutique / Espace / Institut / eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Institut</fullName>
                </value>
                <value>
                    <fullName>Boutique / Institut / Distributeur</fullName>
                </value>
                <value>
                    <fullName>Boutique / Institut / Distributeur / eCommerce</fullName>
                </value>
                <value>
                    <fullName>Boutique / Institut / Distributeur / eCommerce / In Pack</fullName>
                </value>
                <value>
                    <fullName>Boutique / Institut / Distributeur / In Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>ZF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Consumer postal address - line 1 of 2.</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Consumer postal address - line 2 of 2.</description>
        <label>Additional address information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <description>Customer&apos;s birth day on two digits.</description>
        <label>Birth Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Contact Franchise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A003</fullName>
                    <label>Eau Sauvage</label>
                </value>
                <value>
                    <fullName>A004</fullName>
                    <label>Poison</label>
                </value>
                <value>
                    <fullName>A011</fullName>
                    <label>Fahrenheit</label>
                </value>
                <value>
                    <fullName>A031</fullName>
                    <label>J&apos;Adore</label>
                </value>
                <value>
                    <fullName>A034</fullName>
                    <label>Prestige</label>
                </value>
                <value>
                    <fullName>A046</fullName>
                    <label>Diorsnow</label>
                </value>
                <value>
                    <fullName>A049</fullName>
                    <label>Dior Addict</label>
                </value>
                <value>
                    <fullName>A054</fullName>
                    <label>Capture</label>
                </value>
                <value>
                    <fullName>A055</fullName>
                    <label>Diorskin</label>
                </value>
                <value>
                    <fullName>A058</fullName>
                    <label>Rouge Dior</label>
                </value>
                <value>
                    <fullName>A063</fullName>
                    <label>Maison ChristianDior</label>
                </value>
                <value>
                    <fullName>A064</fullName>
                    <label>Dior Homme</label>
                </value>
                <value>
                    <fullName>A067</fullName>
                    <label>Miss Dior</label>
                </value>
                <value>
                    <fullName>A081</fullName>
                    <label>Diorshow</label>
                </value>
                <value>
                    <fullName>A086</fullName>
                    <label>Sauvage</label>
                </value>
                <value>
                    <fullName>A087</fullName>
                    <label>One Essential</label>
                </value>
                <value>
                    <fullName>A089</fullName>
                    <label>HLIFE</label>
                </value>
                <value>
                    <fullName>A090</fullName>
                    <label>JOY</label>
                </value>
                <value>
                    <fullName>A091</fullName>
                    <label>Specific lines</label>
                </value>
                <value>
                    <fullName>A094</fullName>
                    <label>Couture</label>
                </value>
                <value>
                    <fullName>A095</fullName>
                    <label>Dior Skin Essentials</label>
                </value>
                <value>
                    <fullName>A096</fullName>
                    <label>L’Or de Vie</label>
                </value>
                <value>
                    <fullName>A078</fullName>
                    <isActive>false</isActive>
                    <label>Benefit</label>
                </value>
                <value>
                    <fullName>A092</fullName>
                    <isActive>false</isActive>
                    <label>CELINE</label>
                </value>
                <value>
                    <fullName>A005</fullName>
                    <isActive>false</isActive>
                    <label>DNU-Combined</label>
                </value>
                <value>
                    <fullName>A001</fullName>
                    <isActive>false</isActive>
                    <label>DNU-Créations M Dior</label>
                </value>
                <value>
                    <fullName>F00Z</fullName>
                    <isActive>false</isActive>
                    <label>F00Z</label>
                </value>
                <value>
                    <fullName>A093</fullName>
                    <isActive>false</isActive>
                    <label>FENTY</label>
                </value>
                <value>
                    <fullName>A032</fullName>
                    <isActive>false</isActive>
                    <label>J&apos;Adore A032</label>
                </value>
                <value>
                    <fullName>A088</fullName>
                    <isActive>false</isActive>
                    <label>Louis Vuitton</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionOld__c</fullName>
        <label>RegionOld</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adr1_conga__c</fullName>
        <formula>Account.PersonContact.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adr1 conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>Customer&apos;s birth year on four digits.</description>
        <label>Birth Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CosmetoZip__c</fullName>
        <description>Technical Field for CosmetoProcess</description>
        <formula>Zip_Code__c 
/* &quot;WAITING FOR PACKAGE&quot; */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_in_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targetable__c</fullName>
        <formula>IF( 
			AND(
						OR(	NOW() &gt;=   Last_Contacted_Date__c + 15, ISNULL(Last_Contacted_Date__c)),  Campaign_Member__r.Campaign__r.IsActive__c = false
							),
								true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Targetable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <description>Customer&apos;s birth month on two digits.</description>
        <label>Birth Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Id_Text__c</fullName>
        <description>Used as an external ID in order to update Consumers records coming from inbound flow which don&apos;t have any ID in Salesforce yet</description>
        <externalId>true</externalId>
        <label>CRM Id Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CosmetoCity__c</fullName>
        <description>Technical Field for Cosmeto Process</description>
        <formula>City__c 
/*  &quot;WAITING FOR PACKAGE&quot; */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_Services__c</fullName>
        <label>Number of Products Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_Skincare__c</fullName>
        <label>Number of Products Skincare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creation_POS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creation POS</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nb_Fragrance__c</fullName>
        <label>Number of Products Fragrance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_Open_Case__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated by a Process Builder</description>
        <label>Nb Open Case</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumJobTalend__c</fullName>
        <label>NumJobTalend</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_in_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>Satisfaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnover_12M__c</fullName>
        <description>For ex , for GSA &gt; Calculated in One Base when there is a new Sale or on the 1st every month: total in local currency of ecommerce and POS sales on the last 12 rolling months, minus returns.</description>
        <inlineHelpText>Last 12M</inlineHelpText>
        <label>Turnover 12M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_MCD__c</fullName>
        <label>Turnover MCD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIC_Customer__c</fullName>
        <formula>IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;Platinum&apos;),
(ISPICKVAL(Market__c ,&apos;FR&apos;)||ISPICKVAL( Market__c ,&apos;GB&apos;)
)
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;DE&apos;), Turnover_12M__c &gt; 800
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;FR&apos;), Turnover_12M__c &gt; 1400
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;ES&apos;), Turnover_12M__c &gt; 700
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;IT&apos;), Turnover_12M__c &gt; 700
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;BE&apos;), Turnover_12M__c &gt; 600
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;NL&apos;), Turnover_12M__c &gt; 600
)
,TRUE
,IF(
AND(
ISPICKVAL(Loyalty_Level__c ,&apos;&apos;),
ISPICKVAL(Market__c ,&apos;CH&apos;), Turnover_12M__c &gt; 800
)
,TRUE
,IF(
AND(
ISPICKVAL( PredictiveSegmentation__c , &apos;VIC Potential&apos;),OR(
ISPICKVAL(Market__c ,&apos;GB&apos;),
ISPICKVAL(Market__c ,&apos;FR&apos;),
ISPICKVAL(Market__c ,&apos;DE&apos;),
ISPICKVAL(Market__c ,&apos;CH&apos;),
ISPICKVAL(Market__c ,&apos;ES&apos;),
ISPICKVAL(Market__c ,&apos;IT&apos;),
ISPICKVAL(Market__c ,&apos;BE&apos;),
ISPICKVAL(Market__c ,&apos;NL&apos;)))
,TRUE
,FALSE
)
)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIC Customer (CS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filled by Consumer Inbound flow. Contains the BC (Beauty Counselor) attached to this customer.</description>
        <label>Attachment BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CosmetoRegion__c</fullName>
        <formula>TEXT( Region__c)
/*  &quot;WAITING FOR PACKAGE&quot; */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Customer creation date; is sent by external systems, but if the customer is created in Salesforce, default value is set to NOW().</description>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Crypted_Email__c</fullName>
        <label>Crypted Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Opt_In__c</fullName>
        <formula>IF(OR(Opt_in_Phone__c = TRUE, Opt_in_Email__c = TRUE, Opt_in_SMS__c = TRUE, Opt_in_Social_Messaging__c= TRUE, Opt_in_Social_Network_Line__c= TRUE ),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogoHighLight__c</fullName>
        <formula>CASE( Type__c  ,
&quot;PROSPECT&quot;, 
 IMAGE(&quot;https://parfumschristiandior--protodior--c.visualforce.com/resource/1610197603000/GraphicsPackNew/fatcow/farmfresh/32/user_orange.png&quot;,&quot;PROSPECT&quot;),
&quot;CONSUMER&quot;, IMAGE(&quot;https://parfumschristiandior--protodior--c.visualforce.com/resource/1610197603000/GraphicsPackNew/fatcow/farmfresh/32/set_security_question.png&quot;,&quot;CONSUMER&quot;),
IMAGE(&quot;https://parfumschristiandior--protodior--c.visualforce.com/resource/1610197603000/GraphicsPackNew/fatcow/farmfresh/32/user_red.png&quot;,&quot;GUEST&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LogoHighLight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Level__c</fullName>
        <label>Loyalty Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                    <label>12E - Explorer</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12GC - Good Client</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>12P - Platinum</label>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Pearl</fullName>
                </value>
                <value>
                    <fullName>Crystal</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>Disqualified</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Reactivated</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>STAFF</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Black Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_Foundation__c</fullName>
        <label>Number of Products Foundation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tel_Area_Code__c</fullName>
        <label>Tel Area Code</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Lips__c</fullName>
        <label>Turnover Lips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attachement_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment BC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_POS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment POS</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Contacts (Attachment POS)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BirthDayChange__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Filled by process builder when ambassador change the birthdate</description>
        <label>BirthDayChange</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CosmetoAddress__c</fullName>
        <description>Technical Field for CosmetoProcess</description>
        <formula>/*Address_1__c*/
Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CosmetoCountry__c</fullName>
        <description>Techical Fields for CosmetoProcess</description>
        <formula>TEXT( Country__c )
/* &quot;TEXT( Country__c ) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_contactable__c</fullName>
        <formula>OR( Opt_in_Email__c = True,  Opt_in_Mailing__c = True,  Opt_in_SMS__c = True, Opt_in_Phone__c = True, 	Opt_in_Social_Messaging__c = True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is contactable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Case_Date__c</fullName>
        <description>Filter: Case Origine &lt;&gt; Internal ASM OR Spam OR Transferred
Not editable</description>
        <label>Last Case Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sale_s_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GC-98</description>
        <label>Last Sale&apos;s BC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Survey_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Survey BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Contacts (Last Survey BC)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nb_Accessories__c</fullName>
        <label>Number of Products Accessories</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_in_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Typology__c</fullName>
        <label>Sales Typology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Multichannel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>